# back-end

./: .gitignore  .pre-commit-config.yaml  README.md  build_files.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt  vercel.json
.github/workflows/: lint.yaml
src/core/process/application/dto/: process.py
src/core/process/application/service/: list_process.py
src/core/process/domain/: entity.py  test_list_processes.py
src/core/process/domain/dto/: process_dto.py
src/core/process/domain/exceptions/: process_exceptions.py
src/core/process/domain/repository/: process_repository.py
src/core/process/infra/: in_memory_process.py
src/core/process/tests/application/: test_list_processes.py
src/core/process/tests/unit/: test_entity.py
src/core/user/application/service/: create_user.py
src/core/user/domain/: entity.py
src/core/user/domain/dto/: user_dto.py
src/core/user/domain/exceptions/: user_exceptions.py
src/core/user/domain/repository/: user_repository.py
src/core/user/infra/: in_memory_user.py
src/core/utils/security/: jwt.py
src/framework/: asgi.py  settings.py  urls.py  wsgi.py
src/framework/auth/: serializers.py  views.py
src/framework/auth/tests/: test_view.py
src/framework/process/: admin.py  apps.py  models.py  repository.py  serializers.py  views.py
src/framework/process/migrations/: 0001_initial.py
src/framework/process/tests/repository/: test__list_repository.py
src/framework/user/: admin.py  apps.py  models.py  repository.py  serializers.py  views.py
src/framework/user/migrations/: 0001_initial.py
src/framework/user/repository/: repository.py
(+8 files in other folders)
